testcases/error/reserved_identifier.veryl
module __reserved_identifier {}
